argo-apps/apps/ai/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: comfy
spec:
  selector:
    app.kubernetes.io/name: comfy
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  ports:
    - protocol: TCP
      port: 8188
      targetPort: 8188
---
apiVersion: v1
kind: Service
metadata:
  name: easy
spec:
  selector:
    app.kubernetes.io/name: easy
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: swarmui
spec:
  selector:
    app.kubernetes.io/name: swarmui
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  ports:
    - protocol: TCP
      port: 7801
      targetPort: 7801
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
spec:
  # pods from the open-webui chart (release ai-applications)
  selector:
    app.kubernetes.io/instance: ai-applications
    app.kubernetes.io/component: open-webui
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comfy
spec:
  ingressClassName: traefik
  rules:
    - host: comfy.clt.milco.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: comfy
                port:
                  number: 8188
    - host: easy.clt.milco.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easy
                port:
                  number: 9000
    - host: swarm.clt.milco.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: swarmui
                port:
                  number: 7801
    - host: files.clt.milco.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 8080
    - host: ai.clt.milco.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 8080
